Fix scrollbar flash on load with scrollbar-gutter: stable

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -54,6 +54,7 @@ body {
 	color: #fff;
 	font-size: 20px;
 	line-height: 1.7;
+	scrollbar-gutter: stable;
 }
 main {
 	width: 720px;
